--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Teledone Android</string>
+    <string name="title_activity_new_task">NewTaskActivity</string>
+    <string name="task_title">Title</string>
+    <string name="task_description">Description</string>
+    <string name="task_save">Save</string>
 </resources>
